--- a/assets/sass/global.scss
+++ b/assets/sass/global.scss
@@ -52,6 +52,7 @@ html {
 	scroll-behavior: smooth;
 	background: #0b090a;
 	color: #f5f3f4;
+  @include ff-sans;
 }
 
 *:focus-visible {
@@ -87,6 +88,7 @@ body::after {
 body::before {
   background: #000;
   filter: url(#noiseFilter);
+  filter: url(#svgFilter);
 }
 
 body::after {
